# ter-template

./: .gitignore  Cargo.toml  LICENSE  cargo-generate.toml  memory.x  rust-toolchain.toml  ter.toml
.cargo/: config.toml
src/: main.rs
