[package]
edition = "2024"
name = "{{ project-name }}"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.1.0", features = ["alloc"], optional = true }
defmt-rtt = { version = "1.2.0", optional = true }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-stm32 = { version = "0.6.0", features = ["{{ chip-name | downcase }}", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.1", features = [] }
embedded-alloc = "0.7.0"
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

[[bin]]
name = "project"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
debug = 2
lto = "thin"
opt-level = "z"
incremental = true

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 2

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
